--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 					<p>Portfolio</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Proceed as anticipated</a>
+					<a href="#banner" class="button style2 scrolly-middle">Scroll Down</a>
 				</footer>
 			</section>
 
@@ -30,11 +30,9 @@
 				<header>
 					<h2>This is my Portfolio</h2>
 				</header>
-				<p>A brand new site template designed by <a href="http://twitter.com/ajlkn">AJ</a> for <a href="http://html5up.net">HTML5 UP</a>.<br />
-				It’s responsive, built on HTML5/CSS3, and entirely free<br />
-				under the <a href="http://html5up.net/license">Creative Commons license</a>.</p>
+				<p>Hi! This is Adithya and I'm a chemical engineer in training. /a>.</p>
 				<footer>
-					<a href="#first" class="button style2 scrolly">Act on this message</a>
+					<a href="#first" class="button style2 scrolly">Scroll down to learn about my research and interests</a>
 				</footer>
 			</section>
 
